# galatea

./: .gitignore  CLAUDE.md  config.py  pyproject.toml  run_dev.bat  run_dev.sh  run_server.sh
affordances/: __init__.py  query.py  registry.py  schema.py
client/: project.godot
client/scenes/: dialogue_ui.tscn  hud.tscn  main.tscn  npc.tscn  player.tscn  world.tscn
crafting/: __init__.py  bootstrap.py  confusion.py  dag.py  quality.py  recipes.py  skill_hook.py
data/: actions.yaml  tags.yaml  village_seed.yaml
dialogue/: __init__.py  engine.py  prompt_builder.py  session.py  speech_style.py
director/: amplify.py  director.py
docs/: ARCHITECTURE.md  INTERFACES.md  STATE_OF_BUILD.md
events/: log.py
knowledge/: community_kb.py  loader.py  memory.py  retrieval.py  store.py
llm/: __init__.py  factory.py  ollama_runner.py  prompt_log.py  runner.py  stub_runner.py  types.py
npc/: __init__.py  loader.py  registry.py  schema.py  tier.py
prompts/: phase0_prompt.md
server/: __init__.py  __main__.py  handlers.py  serializers.py  test_client.py
sim/: action_executor.py  goap.py  tick.py
specs/: galatea_spec.md
tests/: test_affordances.py  test_amplify.py  test_crafting.py  test_dialogue.py  test_events.py  test_knowledge.py  test_llm.py  test_npc.py  test_sim.py  test_tier.py  test_world.py
time/: __init__.py
tools/: app.py  main.py  state.py
tools/routes/: amplify.py  dag.py  dialogue.py  eventlog.py  knowledge.py  npc.py  prompts.py  seed.py  tickstepper.py  tier.py  world.py
world/: __init__.py  graph.py  loader.py  terrain.py  zone.py
(+29 files in other folders)
