[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galatea"
version = "0.1.0"
description = "NPC Simulation Engine — medieval life simulator with LLM-driven NPCs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "sqlmodel>=0.0.14",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "ollama>=0.1",
    "python-multipart>=0.0.6",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["world", "affordances", "crafting", "npc", "llm", "sim", "dialogue", "knowledge", "events", "director", "time", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
